<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="20dp"
            android:src="@drawable/img_login" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textAlignment="center"
            android:textColor="@color/txt_titulo_login"
            android:textSize="36sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <EditText
                android:id="@+id/register_edUsuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/usuario" />

            <EditText
                android:id="@+id/register_edSenha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/senha"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/register_edConfirmaSenha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirma_senha"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/register_btnSalvar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:backgroundTint="@color/btn_entrar"
                android:text="@string/salvar"
                android:textColor="@color/black" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>